added all the strings and fixed the registration so that a user can not make a new account with an already existing email

--- a/app/src/main/res/layout/about_popup.xml
+++ b/app/src/main/res/layout/about_popup.xml
@@ -9,8 +9,8 @@
         android:id="@+id/tv_infoAuthor"
         android:layout_width="100dp"
         android:layout_height="26dp"
-        android:text="Author(s):"
-        android:textSize="15dp"
+        android:text="@string/aboutPopupAuthor"
+        android:textSize="15sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.023"
@@ -22,8 +22,8 @@
         android:id="@+id/tv_infoVersion"
         android:layout_width="100dp"
         android:layout_height="26dp"
-        android:text="Version:"
-        android:textSize="15dp"
+        android:text="@string/aboutPopupVersion"
+        android:textSize="15sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.023"
@@ -35,8 +35,8 @@
         android:id="@+id/tv_infoVNumber"
         android:layout_width="270dp"
         android:layout_height="26dp"
-        android:text="1.0"
-        android:textSize="15dp"
+        android:text="@string/aboutPopupVersionN"
+        android:textSize="15sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.578"
@@ -48,8 +48,8 @@
         android:id="@+id/tv_infoInstructions"
         android:layout_width="100dp"
         android:layout_height="26dp"
-        android:text="Instructions:"
-        android:textSize="15dp"
+        android:text="@string/aboutPopupInstruct"
+        android:textSize="15sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.023"
@@ -61,8 +61,8 @@
         android:id="@+id/tv_infoNames"
         android:layout_width="270dp"
         android:layout_height="26dp"
-        android:text="Alan, Connor, Harlan, Sam, Warssay"
-        android:textSize="15dp"
+        android:text="@string/aboutPopupNames"
+        android:textSize="15sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.578"
@@ -74,12 +74,7 @@
         android:id="@+id/tv_infoSteps"
         android:layout_width="213dp"
         android:layout_height="235dp"
-        android:text="1. Register if you do not have an account yet\n2. When registering make sure to fill out the questionnaire\n3. After you finish registration, you can login \n4. There will be 5 icons at the top to help you navigate (Left to Right):\n
-    a. Home Page\n
-    b. Details Page\n
-    c. Enter Data Page\n
-    d. Breakdown Page\n
-    e. Settings Page/Logout"
+        android:text="@string/aboutPopupSteps"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.123"
@@ -92,7 +87,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
-        android:text="Close"
+        android:text="@string/generalClose"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
