--- a/app/src/main/res/layout/extra_data_popup.xml
+++ b/app/src/main/res/layout/extra_data_popup.xml
@@ -10,7 +10,7 @@
         android:id="@+id/tv_popupType"
         android:layout_width="115dp"
         android:layout_height="26dp"
-        android:text="Type of Purchase:"
+        android:text="@string/extraPopupType"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.243"
@@ -22,7 +22,7 @@
         android:id="@+id/tv_popupAmount"
         android:layout_width="115dp"
         android:layout_height="26dp"
-        android:text="Amount Spent:"
+        android:text="@string/extraPopupSpent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.243"
@@ -34,7 +34,7 @@
         android:id="@+id/tv_popupDescription"
         android:layout_width="115dp"
         android:layout_height="26dp"
-        android:text="Description:"
+        android:text="@string/extraPopupDesc"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.243"
@@ -46,7 +46,7 @@
         android:id="@+id/tv_popupType2"
         android:layout_width="115dp"
         android:layout_height="26dp"
-        android:text="TextView"
+        android:text=""
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.412"
@@ -58,7 +58,7 @@
         android:id="@+id/tv_popupAmount2"
         android:layout_width="115dp"
         android:layout_height="26dp"
-        android:text="TextView"
+        android:text=""
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.412"
@@ -70,7 +70,7 @@
         android:id="@+id/tv_popupDescription2"
         android:layout_width="115dp"
         android:layout_height="26dp"
-        android:text="TextView"
+        android:text=""
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.412"
@@ -82,7 +82,7 @@
         android:id="@+id/btn_popupClose"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Close"
+        android:text="@string/generalClose"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.727"
@@ -94,7 +94,7 @@
         android:id="@+id/btn_popupDelete"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Delete"
+        android:text="@string/extraPopupDelete"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.309"
