--- a/app/src/main/res/layout/fragment_userdata_needs.xml
+++ b/app/src/main/res/layout/fragment_userdata_needs.xml
@@ -10,7 +10,7 @@
         android:id="@+id/tv_recc_title"
         android:layout_width="120dp"
         android:layout_height="61dp"
-        android:text="Recurring Spending"
+        android:text="@string/fragNeedsRecurring"
         android:textAlignment="center"
         android:textSize="20sp"
         android:textStyle="bold"
@@ -25,7 +25,7 @@
         android:id="@+id/tv_weekly_recc_lbl"
         android:layout_width="130dp"
         android:layout_height="38dp"
-        android:text="Weekly Spending:"
+        android:text="@string/fragNeedsWeekly"
         android:textAlignment="viewStart"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -64,7 +64,7 @@
         android:id="@+id/tv_daily_recc_lbl"
         android:layout_width="120dp"
         android:layout_height="33dp"
-        android:text="Daily Spending:"
+        android:text="@string/fragNeedsDaily"
         android:textAlignment="viewStart"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -78,7 +78,7 @@
         android:id="@+id/tv_monthly_recc_lbl"
         android:layout_width="133dp"
         android:layout_height="38dp"
-        android:text="Monthly Spending:"
+        android:text="@string/fragNeedsMonthly"
         android:textAlignment="viewStart"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -105,7 +105,7 @@
         android:id="@+id/tv_yearly_recc_lbl"
         android:layout_width="120dp"
         android:layout_height="33dp"
-        android:text="Yearly Spending:"
+        android:text="@string/fragNeedsYearly"
         android:textAlignment="viewStart"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
