--- a/app/src/main/res/layout/fragment_userdata_wants.xml
+++ b/app/src/main/res/layout/fragment_userdata_wants.xml
@@ -11,7 +11,7 @@
         android:id="@+id/tv_ind_title"
         android:layout_width="120dp"
         android:layout_height="61dp"
-        android:text="Income Vs Spending"
+        android:text="@string/fragWantsTitle"
         android:textAlignment="center"
         android:textSize="20sp"
         android:textStyle="bold"
@@ -26,7 +26,7 @@
         android:id="@+id/tv_weekly_ind_lbl"
         android:layout_width="130dp"
         android:layout_height="38dp"
-        android:text="Net Weekly:"
+        android:text="@string/fragWantsNetWeekly"
         android:textAlignment="viewStart"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -65,7 +65,7 @@
         android:id="@+id/tv_daily_ind_lbl"
         android:layout_width="120dp"
         android:layout_height="33dp"
-        android:text="Net Daily:"
+        android:text="@string/fragWantsNetDaily"
         android:textAlignment="viewStart"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -79,7 +79,7 @@
         android:id="@+id/tv_monthly_ind_lbl"
         android:layout_width="133dp"
         android:layout_height="38dp"
-        android:text="Net Monthly:"
+        android:text="@string/fragWantsNetMonthly"
         android:textAlignment="viewStart"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -106,7 +106,7 @@
         android:id="@+id/tv_yearly_ind_lbl"
         android:layout_width="120dp"
         android:layout_height="33dp"
-        android:text="Net Yearly:"
+        android:text="@string/fragWantsNetYearly"
         android:textAlignment="viewStart"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
