--- a/app/src/main/res/layout/info_popup.xml
+++ b/app/src/main/res/layout/info_popup.xml
@@ -11,8 +11,8 @@
         android:layout_width="137dp"
         android:layout_height="48dp"
         android:gravity="fill"
-        android:text="Type of Purchase:"
-        android:textSize="15dp"
+        android:text="@string/dataPopupType"
+        android:textSize="15sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.198"
@@ -24,9 +24,9 @@
         android:id="@+id/tv_dataPopupAmount"
         android:layout_width="137dp"
         android:layout_height="48dp"
-        android:text="Amount Spent:"
+        android:text="@string/dataPopupAmount"
         android:gravity="fill"
-        android:textSize="15dp"
+        android:textSize="15sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.201"
@@ -38,9 +38,9 @@
         android:id="@+id/tv_dataPopupType2"
         android:layout_width="137dp"
         android:layout_height="48dp"
-        android:text="TextView"
+        android:text=""
         android:gravity="fill"
-        android:textSize="15dp"
+        android:textSize="15sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.412"
@@ -53,9 +53,8 @@
         android:layout_width="137dp"
         android:layout_height="48dp"
         android:ems="10"
-        android:hint=""
         android:inputType="textPersonName"
-        android:textSize="15dp"
+        android:textSize="15sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.411"
@@ -67,7 +66,7 @@
         android:id="@+id/btn_popupClose"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Close"
+        android:text="@string/generalClose"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.708"
@@ -79,7 +78,7 @@
         android:id="@+id/btn_popupMod"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Modify"
+        android:text="@string/dataPopupMod"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.325"
