--- a/app/src/main/res/layout/activity_enter_data.xml
+++ b/app/src/main/res/layout/activity_enter_data.xml
@@ -12,7 +12,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:hint=""
         android:inputType="textPersonName"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -25,7 +24,7 @@
         android:id="@+id/tv_spending_info"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Extra Info:"
+        android:text="@string/detailsPageExtra"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.1"
@@ -37,7 +36,7 @@
         android:id="@+id/amount_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Amount:"
+        android:text="@string/detailsPageAmount"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.097"
@@ -49,7 +48,7 @@
         android:id="@+id/add_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Add Data"
+        android:text="@string/detailsPageAddData"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.947"
@@ -61,7 +60,7 @@
         android:id="@+id/spending_type_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Spending Type:"
+        android:text="@string/detailsPageSpending"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.05"
@@ -74,7 +73,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:hint="$"
+        android:hint="@string/detailsPageMoney"
         android:inputType="textPersonName"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -87,8 +86,9 @@
         android:id="@+id/spending_title_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Enter Spending Data"
+        android:text="@string/detailsPageTitle"
         android:textSize="24sp"
+        android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
