--- a/app/src/main/res/layout/delete_acc_popup.xml
+++ b/app/src/main/res/layout/delete_acc_popup.xml
@@ -26,7 +26,7 @@
         android:layout_marginTop="36dp"
         android:layout_margin="20dp"
         android:textSize="24sp"
-        android:text="Are you sure you want to delete this account?"
+        android:text="@string/deletePopupText"
         app:layout_constraintTop_toBottomOf="@+id/iv_delete"
         tools:layout_editor_absoluteX="0dp" />
 
@@ -35,7 +35,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="28dp"
-        android:text="Yes"
+        android:text="@string/deletePopupYes"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.154"
@@ -49,7 +49,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="96dp"
         android:layout_marginTop="28dp"
-        android:text="Cancel"
+        android:text="@string/deletePopupCancel"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
