--- a/app/src/main/res/menu/about_app.xml
+++ b/app/src/main/res/menu/about_app.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item android:id="@+id/info"
-        android:title="Home"
+        android:title="@string/generalHome"
         android:orderInCategory="1"
         android:icon="@drawable/ic_baseline_info_24"
         app:showAsAction="always"/>
