--- a/app/src/main/res/layout/extra_data_popup.xml
+++ b/app/src/main/res/layout/extra_data_popup.xml
@@ -69,7 +69,7 @@
     <TextView
         android:id="@+id/tv_popupDescription2"
         android:layout_width="115dp"
-        android:layout_height="26dp"
+        android:layout_height="50dp"
         android:text=""
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -88,7 +88,7 @@
         app:layout_constraintHorizontal_bias="0.727"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_popupDescription2"
-        app:layout_constraintVertical_bias="0.038" />
+        app:layout_constraintVertical_bias="0.102" />
 
     <Button
         android:id="@+id/btn_popupDelete"
@@ -99,8 +99,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.309"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_popupDescription"
-        app:layout_constraintVertical_bias="0.039" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_popupDescription2"
+        app:layout_constraintVertical_bias="0.102" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
