--- a/app/src/main/res/layout/activity_enter_data.xml
+++ b/app/src/main/res/layout/activity_enter_data.xml
@@ -74,7 +74,7 @@
         android:layout_height="wrap_content"
         android:ems="10"
         android:hint="@string/detailsPageMoney"
-        android:inputType="textPersonName"
+        android:inputType="numberDecimal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.681"
