--- a/app/src/main/res/layout/info_popup.xml
+++ b/app/src/main/res/layout/info_popup.xml
@@ -53,7 +53,7 @@
         android:layout_width="137dp"
         android:layout_height="48dp"
         android:ems="10"
-        android:inputType="textPersonName"
+        android:inputType="numberDecimal"
         android:textSize="15sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
